# commonlit-summaries-competition

./: .gitignore  LICENSE  README.md  data.py  inference.py  predict.py  requirements.txt  test-output.xml  train.py  trainer.py  utils.py
package/: pyproject.toml
package/commonlit-summaries/: data.py  predict.py
package/commonlit_summaries/: create_oof_df.py  data.py  experiment.py  inference.py  losses.py  metrics.py  models.py  predict.py  predict_both.py  tokenizer.py  train.py  trainer.py  utils.py  validate.py
package/scripts/: create_oof_df.py  predict.py  predict_both.py  train.py  validate.py
package/tests/: conftest.py
package/tests/integration/: test_data_with_summarizer.py  test_experiment.py  test_inference.py  test_inference_with_model.py  test_trainer.py
package/tests/unit/: test_create_oof.py  test_data.py  test_inference.py  test_losses.py  test_metrics.py  test_models.py  test_tokenizer.py  test_utils.py
