[build-system]
requires = ["setuptools>=61.2", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "commonlit_summaries"
version = "1.0"
dependencies = [
    "pandas",
    "sentencepiece",
    "torch",
    "transformers",
    "typer",
    "wandb",
]

[tool.setuptools.packages.find]
exclude = ["tests"]

[tool.setuptools.package-data]
mlops = ["settings.toml"]

[project.optional-dependencies]
dev = ["black", "pytest", "pytest-cov", "pytest-mock", "ruff"]

[tool.black]
exclude = '(\.eggs|\.git|build|dist)'
include = '.*(?<!version)\.pyi?$'
line-length = 100
target-version = ['py39']


[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
junit_family = "xunit1"
filterwarnings = ["ignore::DeprecationWarning"]
